# etask

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
etask/comm/hub/: hub.hpp  hub.tpp
etask/comm/interfaces/: arduino_serial_interface.hpp  arduino_serial_interface.tpp  arduino_wifi_interface.hpp  arduino_wifi_interface.tpp  interface.hpp  interface.tpp  interfaces.hpp  serial_interface.hpp  serial_interface.tpp  wifi_interface.hpp  wifi_interface.tpp
etask/comm/protocol/: basic_packet.hpp  basic_packet.tpp  checksum.hpp  compute.hpp  compute.tpp  config.hpp  framed_packet.hpp  framed_packet.tpp  packet_header.hpp  packet_header.inl  protocol.hpp  validator.hpp  validator.tpp
etask/core/: channel.hpp  completion_reason.hpp  completion_reason.inl  core.hpp  internal_channel.tpp  state.hpp  state.inl  status_code.hpp  status_code.inl  task.hpp  task.tpp  task_manager.hpp  task_manager.tpp
etask/core/channels/: channels.hpp  external_channel.hpp  external_channel.tpp  internal_channel.hpp  internal_channel.tpp
etask/core/protocol/: directive.hpp  directive.inl  protocol.hpp  reply.hpp  reply.tpp  request.hpp  request.tpp  wire_command.hpp  wire_command.inl
etask/internal/: internal.hpp  macros.hpp  traits.hpp  typelist.hpp
etask/system/: channel.hpp  completion_reason.hpp  state.hpp  state.inl  status_code.hpp  status_code.inl  system.hpp  task.hpp  task.tpp  task_manager.hpp  task_manager.tpp
etask/system/managment/: channel.hpp  management.hpp  task_manager.hpp  task_manager.tpp
etask/system/tasks/: state.hpp  state.inl  task.hpp  task.tpp  tasks.hpp
etask/tools/: envelope.hpp  envelope_view.hpp  envelope_view.tpp  registry.hpp  registry.tpp  slot.hpp  slot.tpp  tools.hpp
example/: main.cpp
example/channels/: channels.hpp  external_channel.cpp  external_channel.hpp  internal_channel.cpp  internal_channel.hpp  internal_channel.tpp
example/global/: global.hpp  hub.hpp  task_id.hpp
example/tasks/simple_tasks/: simple_task1.cpp  simple_task2.cpp  simple_task2.hpp
examples/: README.md  schema.json  schema.yaml
examples/robot/: reboot.cpp  reboot.hpp
examples/robot/arm/base/: context.hpp  move_to.cpp  move_to.hpp  stop.cpp  stop.hpp
examples/robot/arm/elbow/: context.hpp  move_to.cpp  move_to.hpp  stop.cpp  stop.hpp
examples/robot/gripper/: calibrate.cpp  calibrate.hpp  context.hpp  grasp.cpp  grasp.hpp
examples/robot/sensors/imu/: context.hpp  read.cpp  read.hpp
schema/: schema.json  schema.yaml  task_only_schema.json
schema/meta/: etask.schema.json
src/comm/hub/: hub.hpp  hub.tpp
src/comm/interfaces/: interface.hpp  interface.tpp  interfaces.hpp  serial_interface.hpp  serial_interface.tpp  wifi_interface.hpp  wifi_interface.tpp
src/comm/protocol/: basic_packet.hpp  basic_packet.tpp  checksum.hpp  compute.hpp  compute.tpp  config.hpp  framed_packet.hpp  framed_packet.tpp  packet_header.hpp  packet_header.inl  protocol.hpp  validator.hpp  validator.tpp
src/internal/: internal.hpp  macros.hpp  meta.hpp  traits.hpp  typelist.hpp  typeset.hpp
src/system/: system.hpp
src/system/managment/: channel.hpp  management.hpp  task_manager.hpp  task_manager.tpp
src/system/tasks/: state.hpp  state.inl  task.hpp  task.tpp  tasks.hpp
src/system/tools/: envelope.hpp  envelope.tpp  parameters_buffer.hpp  parameters_buffer.tpp  parameters_view.hpp  parameters_view.tpp
src/tools/: envelope.hpp  envelope.tpp
template/global/: protocol.hpp  task_manager.hpp
template/tasks/: task.hpp  tasks.hpp
template/tasks/simple_tasks/: simple_task1.hpp  simple_tasks.hpp
tools/src/: __init__.py  main.py  parser.py  utils.py
tools/src/comm/: __init__.py
tools/src/comm/hub/: hub.py
tools/src/comm/interfaces/: __init__.py  interface.py  uart_interface.py  wifi_interface.py
tools/src/comm/protocol/: __init__.py  basic_packet.py  checksum.py  compute.py  framed_packet.py  packet_header.py  validator.py
tools/src/schema/: __init__.py  custom_schema.py  device_based_schema.py  schema.py  schema_error.py  subsystem_based_schema.py  task_only_schema.py
tools/src/schemav2/: __init__.py  cli.py  tree.py
tools/src/schemav2/codegen/: __init__.py  context_file.py  emitter.py  naming.py  renamer.py  signature_updater.py  task_file.py
tools/src/schemav2/errors/: __init__.py  abstract_instance_error.py  anchor_not_found_error.py  duplicate_uid_error.py  invalid_identifier_error.py  rename_error.py  schema_shape_error.py  unknown_type_error.py
tools/src/schemav2/models/: __init__.py  node.py  param.py  type_map.py
tools/src/utils/: __init__.py  arg_tools.py  require.py
tools/tests/comm/hub/: test_hub.py
tools/tests/comm/interfaces/: fakes.py  test_uart_interface.py  test_wifi_interface.py
tools/tests/comm/protocol/: test_basic_packet.py  test_compute.py  test_framed_packet.py  test_packet_header.py  test_validator.py
tools/tests/schemav2/: test_meta_schema.py  test_node.py  test_tree.py
tools/tests/schemav2/codegen/: test_emitter.py  test_naming.py  test_renamer.py  test_signature_updater.py
